Updated some header CSS. Also worked on body, need to fix spacing later

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Base style */
-
 * {
 	box-sizing: border-box;
 }
@@ -34,6 +32,11 @@ body {
 	text-transform: uppercase;
 }
 
+.primary {
+	text-align: center ;
+	font-size: 1.5rem;
+}
+
 .title {
     margin: 0 0 10px;
     padding: 0 0 30px;
@@ -52,12 +55,29 @@ body {
     width: 100px;
 }
 
-.primary {
-	text-align: center ;
-	margin: 0 300px;
-	font-size: 1.5rem;
+.space {
+	margin: 50px 300px 0 300px;
 }
 
+.discover {
+
+	color: white;
+	padding: 10% 6%;
+	background: url("images/Nature.jpg") no-repeat center ;
+	background-size: cover;
+	box-shadow: inset 0 0 50px 10px rgba(0,0,0, .8);
+	border: 2px solid black;
+	border-radius: 25px;
+	text-align: left;
+	margin: 100px 300px;
+
+
+}
+
+.discover h2 {
+
+	text-align: left;
+}
 
 .nature {
 	margin: 50px 0;
@@ -77,26 +97,41 @@ h3 {
 }
 
 img {
-	border: 2px solid #92EC11;
+	border: 2px solid white;
 	border-radius: 25px;
 }
 
-  	
-.discover {
+.resize {
+	width: 300px;
+	height: auto;
+}
 
-	color: white;
-	padding: 20% 14%;
-	background: url("images/Nature.jpg") no-repeat center ;
-	background-size: cover;
-	box-shadow: inset 0 0 50px 10px rgba(0,0,0, .8);
-	border: 2px solid black;
-	border-radius: 25px;
-	text-align: left;
-	margin: 200px 0 200px 0;
+.images {
+	width: 700px;
+	height: auto;
+}
+
+.court, 
+.playground,
+.green-space,
+.beauty {
+	width: 46.5%;
+	margin: 0 300px;
 
 }
 
-.discover h2 {
+.court,
+.green-space {
+	float: left;
+}
 
-	text-align: left;
+.playground,
+.beauty {
+	float: right;
+}
+
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
 }
